--- a/prompting_exploration/prompting_explore.ipynb
+++ b/prompting_exploration/prompting_explore.ipynb
@@ -449,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('latenv')",
    "language": "python",
    "name": "python3"
   },
@@ -464,6 +464,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c2f77846b0243d2dee26bbaa6fd0a0b34a7adea800a5063b4b91f2f98ac96800"
+   }
   }
  },
  "nbformat": 4,
