buggy version, attempted to clean things up

--- a/mt_debug.ipynb
+++ b/mt_debug.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "4dd758ae-aabd-4aae-87cc-f94295f34075",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-07-31 05:42:09.846351: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-07-31 05:42:09.846380: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "b3f1cd9c-23e0-4a75-b41b-708152ee8687",
    "metadata": {},
    "outputs": [],
@@ -52,20 +61,38 @@
     "    return [cand_data['ref']]*clen, cand_data['cands'], [cand_data['inp']]*clen\n",
     "        \n",
     "\n",
-    "def get_average_score(cand_data):\n",
+    "def get_average_score(cand_data, resco):\n",
     "    scoresum = 0\n",
     "    scoretot = 0\n",
+    "    s = \"scores\"\n",
+    "    if resco:\n",
+    "        s = \"rescores\"\n",
     "    for c in cand_data:\n",
-    "        scoresum+=sum(c['rescores'])\n",
-    "        scoretot+=len(c['rescores'])\n",
+    "        scoresum+=sum(c[s])\n",
+    "        scoretot+=len(c[s])\n",
     "    return scoresum/scoretot\n",
     "\n",
     "def amax_score(cand_data):\n",
     "    scoresum = 0\n",
     "    scoretot = 0\n",
     "    for c in cand_data:\n",
-    "        scoresum+=max(c['rescores'])\n",
+    "        if len(c['scores'])==0:\n",
+    "            continue\n",
+    "        scoresum+=max(c['scores'])\n",
     "        scoretot+=1\n",
+    "    return scoresum/scoretot\n",
+    "\n",
+    "def get_average_candlen(cand_data):\n",
+    "    scoresum = 0\n",
+    "    scoretot = 0\n",
+    "    empty = 0\n",
+    "    for c in cand_data:\n",
+    "        if len(c['scores'])==0:\n",
+    "            empty+=1\n",
+    "            continue\n",
+    "        scoresum+=len(c['scores'])\n",
+    "        scoretot+=1\n",
+    "    print(\"Are empty :\"+str(empty))\n",
     "    return scoresum/scoretot\n",
     "\n",
     "#get_average_score(lat_cands[:100])"
@@ -73,15 +100,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "9d57d834-69ab-4fd8-9c68-f226e6e3d68c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "86bbcfb0-a04e-4caf-b51c-1cf477773167",
    "metadata": {},
    "outputs": [],
    "source": [
     "# figure out average token length\n",
     "#lentok = AutoTokenizer.from_pretrained(\"facebook/mbart-large-50-many-to-one-mmt\", src_lang=\"de_DE\")\n",
-    "beam_cands = load_cands(\"./candoutputs/beam40en_degoodrescored.jsonl\")\n",
-    "lat_cands = load_cands(\"./candoutputs/latde100rescored.jsonl\")"
+    "beam_cands = load_cands(\"./oldoutputs/candoutputs_v2/beam50fr_en.jsonl\")\n",
+    "lat_cands = load_cands(\"./candoutputs/fr-en_bfs_recom_2_-.jsonl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b2e45fff-52cd-4761-9e62-ffe1f0e3ae96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.7061253801690769\n",
+      "-0.3560996056881159\n",
+      "Are empty :1\n",
+      "8.53\n",
+      "-0.42656608538404106\n",
+      "-0.3551072596013546\n",
+      "Are empty :0\n",
+      "50.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_average_score(lat_cands, False))\n",
+    "print(amax_score(lat_cands))\n",
+    "print(get_average_candlen(lat_cands))\n",
+    "print(get_average_score(beam_cands, False))\n",
+    "print(amax_score(beam_cands))\n",
+    "print(get_average_candlen(beam_cands))\n"
    ]
   },
   {
