--- a/view_outputs.ipynb
+++ b/view_outputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "f7ffe039-f47a-4d63-b73f-032bf8b5d55b",
    "metadata": {},
    "outputs": [],
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "461b3742-7c6b-4cdc-b6a0-1d2699b11f2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "beam50 = json.load(open('rerankdata/beam50fr_en.json'))\n",
+    "#beam50 = json.load(open('rerankdata/beam50fr_en.json'))\n",
     "lat2sum = json.load(open('rerankdata/fr-en_bfs_recom_2_-.json'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "c6c7c05f-26a7-44bd-b675-11bcbd807d65",
    "metadata": {},
    "outputs": [
@@ -31,9 +31,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "topinitial: 0.18045616146250099\n",
-      "rerankqe : -0.21851422955446384\n",
-      "oracle: -0.06018384783437439\n"
+      "topinitial: 0.2723949983716011\n",
+      "rerankqe : 0.24515178207308053\n",
+      "oracle: 0.32356352811679245\n"
      ]
     }
    ],
