--- a/model_construct.ipynb
+++ b/model_construct.ipynb
@@ -2,14 +2,191 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "ad833c3b-f011-491e-a028-f79b9f053bde",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-12 06:23:02.219214: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-08-12 06:23:02.219235: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "import re"
+    "import re\n",
+    "from transformers import AutoTokenizer\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a2fd5c37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GBASE = \"./reverse_graphs/\"\n",
+    "endebase = \"mt1n_en-de_bfs_recom_1_80_False_0.4_True_False_4_5_rcb_0.9_0.0_0.9/\"\n",
+    "frenbase = \"mtn1_fr-en_bfs_recom_1_-1_False_0.4_True_False_4_5_rcb_0.9_0.0_0.9/\"\n",
+    "\n",
+    "def load_graph(fname):\n",
+    "    return pickle.load(open(fname,'rb'))\n",
+    "\n",
+    "def flatten_lattice(graph):\n",
+    "    tokdicts = []\n",
+    "    visited = []\n",
+    "    poslist = []\n",
+    "    greedy_flatten(tokdicts, visited, graph['root'], 0)\n",
+    "    return tokdicts\n",
+    "    \n",
+    "def greedy_flatten(tdicts, visited, node, pos):\n",
+    "    if node.uid in visited:\n",
+    "        print(\"cycle here\")\n",
+    "        return\n",
+    "    node.pos = pos\n",
+    "    tdicts.append(node)\n",
+    "    visited.append(node.uid)\n",
+    "    \n",
+    "    scosort = list(np.argsort(node.next_scores))\n",
+    "    \n",
+    "    # TODO check which direction we need to go from argsort\n",
+    "    for i in range(0, len(scosort)):\n",
+    "        greedy_flatten(tdicts, visited, node.nextlist[scosort[i]], pos+1)\n",
+    "        \n",
+    "def get_processed_graph_data(lanbase, stop=-1):\n",
+    "    base = GBASE+lanbase\n",
+    "    paths = os.listdir(base)\n",
+    "    print(len(paths))\n",
+    "    result = []\n",
+    "    if stop==-1:\n",
+    "        stop = len(paths)\n",
+    "    for i in range(0, stop):\n",
+    "        curgraph = load_graph(base+paths[i])\n",
+    "        result.append(flatten_lattice(curgraph))\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a18d956d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "301\n",
+      "cycle here\n",
+      "cycle here\n",
+      "cycle here\n"
+     ]
+    }
+   ],
+   "source": [
+    "processedgraphs = get_processed_graph_data(frenbase, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5db6f67f-83f6-419e-b79d-fd8f1ec5580f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "</s>  -  0\n",
+      "en_XX  -  1\n",
+      "On  -  2\n",
+      "Monday  -  3\n",
+      ",  -  4\n",
+      "  -  5\n",
+      "20,000  -  6\n",
+      "police  -  7\n",
+      "men  -  8\n",
+      "will  -  9\n",
+      "be  -  10\n",
+      "de  -  11\n",
+      "plo  -  12\n",
+      "y  -  13\n",
+      "ed  -  14\n",
+      "to  -  15\n",
+      "the  -  16\n",
+      "Cair  -  17\n",
+      "o  -  18\n",
+      "Police  -  19\n",
+      "Academy  -  20\n",
+      ",  -  21\n",
+      "where  -  22\n",
+      "Mohamed  -  23\n",
+      "Mor  -  24\n",
+      "si  -  25\n",
+      "will  -  26\n",
+      "be  -  27\n",
+      "tried  -  28\n",
+      ".  -  29\n",
+      "will  -  8\n",
+      "be  -  9\n",
+      "de  -  10\n",
+      "officer  -  8\n",
+      "s  -  9\n",
+      "will  -  10\n",
+      "be  -  11\n",
+      "de  -  12\n",
+      "plo  -  13\n",
+      "y  -  14\n",
+      "ed  -  15\n",
+      "before  -  16\n",
+      "the  -  17\n",
+      "Cair  -  18\n",
+      "o  -  19\n",
+      "to  -  16\n",
+      "the  -  17\n",
+      "Cair  -  18\n",
+      "o  -  19\n",
+      "Police  -  20\n",
+      "Academy  -  21\n",
+      "where  -  22\n",
+      "Mohamed  -  23\n",
+      "Mor  -  24\n",
+      "to  -  22\n",
+      "try  -  23\n",
+      "Mohamed  -  24\n",
+      "Mor  -  25\n",
+      "si  -  26\n",
+      ".  -  27\n",
+      ",  -  22\n",
+      "where  -  23\n",
+      "Mohamed  -  24\n",
+      "Mor  -  25\n",
+      "si  -  26\n",
+      "is  -  27\n",
+      "to  -  28\n",
+      "be  -  29\n",
+      "tried  -  30\n",
+      ".  -  31\n",
+      "will  -  27\n",
+      "be  -  28\n",
+      "tried  -  29\n",
+      ".  -  30\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_proctoks(revnodes):\n",
+    "    for rev in revnodes:\n",
+    "        print(rev.token_str, \" - \", rev.pos)\n",
+    "\n",
+    "print_proctoks(processedgraphs[0])"
    ]
   },
   {
