--- a/model_construct.ipynb
+++ b/model_construct.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-08-17 09:27:41.644601: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-08-17 09:27:41.644623: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-08-18 04:10:01.055114: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-08-18 04:10:01.055134: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
    "source": [
     "GBASE = \"./reverse_graphs/\"\n",
     "endebase = \"mt1n_en-de_bfs_recom_4_80_False_0.4_True_False_4_5_rcb_0.9_0.0_0.9/\"\n",
-    "frenbase = \"mtn1_fr-en_bfs_recom_4_-1_False_0.4_True_False_4_5_rcb_0.91_0.0_0.9/\"\n",
+    "frenbase = \"mtn1_fr-en_bfs_recom_4_-1_False_0.4_True_False_4_5_rcb_0.902_0.0_0.9/\"\n",
     "bert_tok = AutoTokenizer.from_pretrained('bert-base-cased')\n",
     "mbart_tok = AutoTokenizer.from_pretrained(\"facebook/mbart-large-50-many-to-one-mmt\")\n",
     "mbart_tok.src_lang = \"en_XX\""
@@ -265,7 +265,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "id": "711da42e-2886-4bfd-a732-4e138cb8f474",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(processedgraphs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "807ab356-f2c5-405d-9d34-ae02328c30dd",
    "metadata": {},
    "outputs": [
@@ -273,8 +294,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "126\n",
-      "The NSA case under lines the complete lack of discussion on intelligence. debate over intelligence. about intelligence. on intelligence. intelligence discussion. debate. total absence of any debate on intelligence. intelligence debate. a debate on an intelligence debate. debate over intelligence. about intelligence. on intelligence discussion. lack of discussion on intelligence. debate over about scores the complete lack absence of any a an debate over about total lack highlights complete lack of debate on a complete lack of total absence of debate on intelligence discussion. lack of debate the complete lack total lack NSA under lines total lack of scores total lack of highlights the total lack of complete absence of debate total\n"
+      "455\n",
+      "Antibodies trace all nicotine molecules found in the blood system and neutralize them before they reach the brain., making it impossible for smokers to have their nicotine dose. a smoker to get his nicotine have his or her nicotine dose. the smoker to get which prevents smokers from taking their nicotine dose from being reached by the smoker. reaching the smoker. getting their nicotine dose. a smoker from receiving his or her nicotine reaching their nicotine his nicotine or her taking the nicotine their his nicotine or her dose of nicotine. having the right dose of nicotine. their nicotine his nicotine or her dose getting to his nicotine a dose of nicotine. the nicotine their nicotine dosage. his dose of nicotine. or her dose of nicotine. nicotine level. dosage. the smoking person from getting his nicotine smoker from reaching his or nicotine receiving his nicotine taking their his or nicotine having the nicotine their nicotine his nicotine or her thus stopping the smoker keeping the smoker preventing smoking from having its nicotine smokers from receiving their nicotine reaching their nicotine having their taking their nicotine getting the their dose of nicotine. a smoker the nicotine user from getting his nicotine smoking person smo kers from ker thereby blocking the smoker depriving the smoker of his nicotine or her stopping the keeping the smoker preventing smoking smokers a the nicotine user smoking preventing cigarette smokers from smoking smokers a person from getting their nicotine the cigarette smoker from nicotine from reaching the smoker. user smoking individual from getting his or her neutralize them prior to reaching the brain., which thus thereby before reaching the they get to the brain., present in the blood in the blood and neutralize them before they reach the brain., preventing the smoker from getting his detect all nicotine track down all nicotine all the nicotine nicotine\n"
      ]
     },
     {
@@ -283,13 +304,13 @@
        "'[CLS] The NSA case underlines the complete lack of discussion on intelligence. debate over intelligence. about intelligence. on intelligence. intelligence discussion. debate. total absence of any debate on intelligence. intelligence debate. a debate on an intelligence debate. debate over intelligence. about intelligence. on intelligence discussion. lack of discussion on intelligence. debate over about scores the complete lack absence of any a an debate over about total lack highlights complete lack of debate on a complete lack of total absence of debate on intelligence discussion. lack of debate the complete lack total lack NSA underlines total lack ofscores total lack of highlights the total lack of complete absence of debate total [SEP]'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p = processedgraphs[0]\n",
+    "p = processedgraphs[17]\n",
     "tlist = get_toklist(p)\n",
     "decstr = bert_tok.decode(tlist)\n",
     "print(len(tlist))\n",
@@ -301,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "991b14d0-028c-4150-9b86-8a83dd52d69e",
    "metadata": {},
    "outputs": [],
@@ -334,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "ea7ef2fb-6adc-4109-89ad-1677afb42794",
    "metadata": {},
    "outputs": [],
@@ -367,9 +388,12 @@
     "    def parameters(self):\n",
     "        return self.probe.parameters()\n",
     "  \n",
-    "    def forward(self, sentences):\n",
+    "    def forward(self, sentences, pos_ids=None):\n",
     "        with torch.no_grad(): # no training of BERT parameters\n",
-    "            word_rep, sentence_rep = self.bert(sentences, return_dict=False)\n",
+    "            if pos_ids==None:\n",
+    "                word_rep, sentence_rep = self.bert(sentences, return_dict=False)\n",
+    "            else:\n",
+    "                word_rep, sentence_rep = self.bert(sentences, position_ids=pos_ids, return_dict=False)\n",
     "        return self.probe(word_rep)"
    ]
   },
@@ -387,37 +411,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "id": "2e2b4ab9-6551-4f5b-b22a-a51460020ed7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "94162b0f-e48b-4a5e-b805-5374509c6aa0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "342\n",
-      "torch.Size([342, 500])\n",
-      "error somewhere\n",
-      "143\n",
-      "torch.Size([143, 500])\n",
-      "error somewhere\n",
-      "1000\n",
-      "torch.Size([1000, 500])\n",
-      "error somewhere\n",
-      "1000\n",
-      "torch.Size([1000, 500])\n",
-      "error somewhere\n",
-      "1000\n",
-      "torch.Size([1000, 500])\n",
-      "error somewhere\n",
-      "142\n",
-      "torch.Size([142, 500])\n",
-      "error somewhere\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "MAX_LEN = 500\n",
+    "\n",
+    "def find_indices(list_to_check, item_to_find):\n",
+    "    indices = locate(list_to_check, lambda x: x == item_to_find)\n",
+    "    return list(indices)\n",
+    "\n",
+    "def clean_expanded(cand):\n",
+    "    tmp = cand.replace(\"</s>\", \"\")\n",
+    "    tmp = tmp.replace(\"en_XX\", \"\")\n",
+    "    tmp = tmp.replace(\"<s>\", \"\")\n",
+    "    return tmp.strip()\n",
     "\n",
     "def prepare_dataset(resset):\n",
     "    x = []\n",
@@ -435,35 +452,29 @@
     "                    toktmp = toktmp[:MAX_LEN]\n",
     "                curinps.append(toktmp)\n",
     "            except:\n",
-    "                print(\"error somewhere\")\n",
+    "                print(\"weird error happened\")\n",
+    "                \n",
+    "            \n",
     "        print(len(curinps))\n",
     "        curouts = []\n",
     "        tinp = torch.stack(curinps).long().to(device)\n",
     "        print(tinp.shape)\n",
     "        y.append(posbmodel(tinp))\n",
-    "        x.append(curinps)\n",
+    "        x.append(tinp)\n",
     "        \n",
     "        print(\"error somewhere\")\n",
     "    return x, y\n",
-    "            \n",
-    "dsetx, dsety = prepare_dataset(resarrs)"
+    "            \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c3307774-7abd-4361-ba53-43660ea493b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "0252fa27-de41-4b9e-bc49-5629a7dbe424",
    "metadata": {},
    "outputs": [],
    "source": [
+    "MAXLEN = 500\n",
     "def create_inputs(pgraphs):\n",
     "    result_tok = []\n",
     "    result_pos = []\n",
@@ -473,26 +484,274 @@
     "        for tok in p:\n",
     "            tokstmp.append(tok['token_idx'])\n",
     "            postmp.append(tok['pos']+1)\n",
+    "        if len(tokstmp)>=MAX_LEN-2:\n",
+    "            tokstmp = tokstmp[:MAXLEN-2]\n",
+    "            postmp = postmp[:MAXLEN-2]\n",
     "        tokstmp = [101] + tokstmp + [102]\n",
-    "        postmp = [0] + postmp + [max(postmp)+1]\n",
+    "        rem = MAX_LEN - len(tokstmp)\n",
+    "        postmp = [0] + postmp + [max(postmp)+1] + [0]*rem\n",
+    "        tokstmp = tokstmp + [0]*rem\n",
     "        result_tok.append(tokstmp)\n",
     "        result_pos.append(postmp)\n",
     "        \n",
     "    return torch.tensor(result_tok).to(device), torch.tensor(result_pos).to(device)\n",
-    "\n"
+    "\n",
+    "def dataset_make_tags(inpx, inpy):\n",
+    "    tokmap = {}\n",
+    "    print(len(inpx))\n",
+    "    for i in range(0, len(inpx)):\n",
+    "        inpi = inpx[i]\n",
+    "        for j in range(0, len(inpi)):\n",
+    "            k = str(int(inpi[j]))\n",
+    "            if k not in tokmap:\n",
+    "                tokmap[k]=[]\n",
+    "            tokmap[k].append(inpy[i][j])\n",
+    "    for k in tokmap.keys():\n",
+    "        \n",
+    "        tokmap[k] = torch.stack(tokmap[k]).to(device)\n",
+    "        tokmap[k] = torch.mean(tokmap[k], dim=0)\n",
+    "        #print(tokmap[k].shape)\n",
+    "    return tokmap\n",
+    "    \n",
+    "def makelattice_pos_data(tokmap, flat):\n",
+    "    res = []\n",
+    "    for tok in flat:\n",
+    "        # this should always work given how the lattice is structured\n",
+    "        try:\n",
+    "            res.append(tokmap[str(int(tok))])\n",
+    "        except:\n",
+    "            print(\"missing token\")\n",
+    "            res.append(torch.zeros(52).to(device))\n",
+    "    return torch.stack(res).float()\n",
+    "\n",
+    "def lattice_pos_goldlabels(datax, datay, sents):\n",
+    "    dataset = []\n",
+    "    for i in range(len(datax)):\n",
+    "        tmap = dataset_make_tags(datax[i], datay[i])\n",
+    "        dataset.append(makelattice_pos_data(tmap, sents[i]))\n",
+    "        print(i)\n",
+    "    return torch.stack(dataset).float().to(device)\n",
+    "\n",
+    "soft = torch.nn.Softmax(dim=2)\n",
+    "loss = torch.nn.BCEWithLogitsLoss()\n",
+    "l1 = torch.nn.L1Loss()\n",
+    "mse = torch.nn.MSELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d5c3cc95-a92d-4a74-a6cf-811dc81851f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sents, posids = create_inputs(processedgraphs)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a91314d1-8216-43fc-8ba4-c60129285dde",
+   "id": "4242d79e-78c7-4bb6-8a30-895b0aa2acb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getlabset_partial(explodeds, startind, amt, sents):\n",
+    "    dsetx, dsety = prepare_dataset(resarrs[startind:amt])\n",
+    "    latposylabels = lattice_pos_goldlabels(dsetx, dsety, sents[startind:amt])\n",
+    "    del dsetx, dsety\n",
+    "    return latposylabels\n",
+    "\n",
+    "def get_biglabset():\n",
+    "    result = None\n",
+    "    for i in range(0, int(len(resarrs)/10)):\n",
+    "        if result ==None:\n",
+    "            result = get_labset_partial(resarrs, i*10, 10, )\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "942d96be-7d8f-43f2-852f-7650e21e222b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 91,
+   "id": "2f6c5c4a-47a2-491c-b061-dcfc80f65d9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 500, 52])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latposylabels.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "38fc1532-0756-4196-8ae2-edc68d9ccb34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = posbmodel(sents, posids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "5cfb3c03-d890-4564-9528-b8839124090a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1., device='cuda:2', grad_fn=<SumBackward0>)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sum(soft(latposylabels)[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "d54f0945-f622-48a2-a2ef-68e08315f17c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r1 = torch.rand((6, 500, 52))\n",
+    "r2 = torch.rand((6, 500, 52))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "23990fa6-3432-4723-b224-22dd173b3423",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.1668)"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mse(r1, r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "7e9330c3-b4c7-4a18-b483-a8db61a73597",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.7338)"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss(r1, r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "a91314d1-8216-43fc-8ba4-c60129285dde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(39.3077, device='cuda:2', grad_fn=<MseLossBackward0>)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mse(latposylabels, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "a7b586f3-1873-4370-8c79-e455d1f624c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5385395537525355\n",
+      "0.02129817444219067\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_accuracy(setpred, setlabels):\n",
+    "    cor = 0\n",
+    "    tot = 0\n",
+    "    for i in range(0, len(setpred)):\n",
+    "        ex = setpred[i]\n",
+    "        for j in range(0, len(ex)):\n",
+    "            if sum(setlabels[i][j])==0:\n",
+    "                continue\n",
+    "            tot+=1\n",
+    "            if torch.argmax(ex[j])==torch.argmax(setlabels[i][j]):\n",
+    "                cor+=1\n",
+    "    return cor/tot\n",
+    "\n",
+    "def check_randacc(setpred, setlabels):\n",
+    "    cor = 0\n",
+    "    tot = 0\n",
+    "    for i in range(0, len(setpred)):\n",
+    "        ex = setpred[i]\n",
+    "        for j in range(0, len(ex)):\n",
+    "            if sum(setlabels[i][j])==0:\n",
+    "                continue\n",
+    "            tot+=1\n",
+    "            if torch.argmax(torch.rand(52).to(device))==torch.argmax(setlabels[i][j]):\n",
+    "                cor+=1\n",
+    "    return cor/tot\n",
+    "            \n",
+    "print(check_accuracy(pred, latposylabels))\n",
+    "print(check_randacc(pred, latposylabels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "f638fbd8-fb3a-43f7-aa87-b6396c9bde50",
    "metadata": {},
    "outputs": [],
@@ -533,16 +792,7 @@
     "                continue\n",
     "            sims.append(1-cosine(e1[i1], e2[i2]))\n",
     "    return sims\n",
-    "\n",
-    "def find_indices(list_to_check, item_to_find):\n",
-    "    indices = locate(list_to_check, lambda x: x == item_to_find)\n",
-    "    return list(indices)\n",
-    "\n",
-    "def clean_expanded(cand):\n",
-    "    tmp = cand.replace(\"</s>\", \"\")\n",
-    "    tmp = tmp.replace(\"en_XX\", \"\")\n",
-    "    tmp = tmp.replace(\"<s>\", \"\")\n",
-    "    return tmp.strip()"
+    "\n"
    ]
   },
   {
@@ -587,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 33,
    "id": "6ac78556-8dbb-4eaf-b982-bb2a390df8c5",
    "metadata": {},
    "outputs": [],
