More Optimisation of pipeline

--- a/model_construct.ipynb
+++ b/model_construct.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-08-18 04:10:01.055114: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-08-18 04:10:01.055134: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-08-18 06:03:07.230700: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-08-18 06:03:07.230722: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -245,12 +245,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "46c927b0-b0d1-44af-bfbb-6718dd9adb99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1451865b-68f1-4f4c-9d54-1f9eaa6afccf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "resarrs = []\n",
-    "get_allcands(frenbase, -1, resarrs)"
+    "get_allcands(frenbase, -1, resarrs)\n",
+    "\"\""
    ]
   },
   {
@@ -260,22 +270,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processedgraphs = get_processed_graph_data(frenbase, -1)"
+    "processedgraphs = get_processed_graph_data(frenbase, -1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
+   "id": "f3b95a3a-60b1-498a-9811-e617b14c275f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57\n",
+      "61\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m r \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mlen\u001b[39m(resarrs)):\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[43mresarrs\u001b[49m\u001b[43m[\u001b[49m\u001b[43mr\u001b[49m\u001b[43m]\u001b[49m)\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;28mprint\u001b[39m(r)\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01mdel\u001b[39;00m resarrs[r]\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "for r in range(0, len(resarrs)):\n",
+    "    if len(resarrs[r])==0:\n",
+    "        print(r)\n",
+    "        del resarrs[r]\n",
+    "        del processedgraphs[r]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "43f8942a-464a-4bd9-813b-2c0153075500",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(resarrs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "711da42e-2886-4bfd-a732-4e138cb8f474",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "101"
+       "99"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "807ab356-f2c5-405d-9d34-ae02328c30dd",
    "metadata": {},
    "outputs": [
@@ -304,7 +369,7 @@
        "'[CLS] The NSA case underlines the complete lack of discussion on intelligence. debate over intelligence. about intelligence. on intelligence. intelligence discussion. debate. total absence of any debate on intelligence. intelligence debate. a debate on an intelligence debate. debate over intelligence. about intelligence. on intelligence discussion. lack of discussion on intelligence. debate over about scores the complete lack absence of any a an debate over about total lack highlights complete lack of debate on a complete lack of total absence of debate on intelligence discussion. lack of debate the complete lack total lack NSA underlines total lack ofscores total lack of highlights the total lack of complete absence of debate total [SEP]'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "991b14d0-028c-4150-9b86-8a83dd52d69e",
    "metadata": {},
    "outputs": [],
@@ -355,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "ea7ef2fb-6adc-4109-89ad-1677afb42794",
    "metadata": {},
    "outputs": [],
@@ -411,15 +476,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "2e2b4ab9-6551-4f5b-b22a-a51460020ed7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "878956544"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.memory_allocated(\"cuda:2\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "94162b0f-e48b-4a5e-b805-5374509c6aa0",
    "metadata": {},
    "outputs": [],
@@ -469,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "0252fa27-de41-4b9e-bc49-5629a7dbe424",
    "metadata": {},
    "outputs": [],
@@ -540,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "d5c3cc95-a92d-4a74-a6cf-811dc81851f5",
    "metadata": {},
    "outputs": [],
@@ -550,57 +628,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "id": "0cbd406f-bc0b-4bf6-a730-fd40f7ddcb51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "445022720\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.cuda.memory_allocated(\"cuda:2\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "830c77fe-fdda-471b-abb6-73a40565615e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#del posbmodel\n",
+    "torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "4242d79e-78c7-4bb6-8a30-895b0aa2acb4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getlabset_partial(explodeds, startind, amt, sents):\n",
-    "    dsetx, dsety = prepare_dataset(resarrs[startind:amt])\n",
-    "    latposylabels = lattice_pos_goldlabels(dsetx, dsety, sents[startind:amt])\n",
+    "def get_labset_partial(explodeds, startind, amt):\n",
+    "    print(torch.cuda.memory_allocated(\"cuda:2\"))\n",
+    "    dsetx, dsety = prepare_dataset(explodeds[startind:startind+amt])\n",
+    "    print(len(dsetx))\n",
+    "    print(torch.cuda.memory_allocated(\"cuda:2\"))\n",
+    "    assert len(dsetx)==amt\n",
+    "    latposylabels = lattice_pos_goldlabels(dsetx, dsety, sents[startind:startind+amt])\n",
+    "    print(torch.cuda.memory_allocated(\"cuda:2\"))\n",
     "    del dsetx, dsety\n",
+    "    \n",
+    "    torch.cuda.empty_cache()\n",
+    "    print(torch.cuda.memory_allocated(\"cuda:2\"))\n",
     "    return latposylabels\n",
     "\n",
-    "def get_biglabset():\n",
+    "def get_biglabset(split):\n",
     "    result = None\n",
-    "    for i in range(0, int(len(resarrs)/10)):\n",
-    "        if result ==None:\n",
-    "            result = get_labset_partial(resarrs, i*10, 10, )\n",
+    "    for i in range(0, int(len(resarrs)/split)):\n",
+    "        print(\"SUBSET - \", i)\n",
+    "        try:\n",
+    "            if result ==None:\n",
+    "                result = get_labset_partial(resarrs, i*split, split)\n",
+    "            else:\n",
+    "                result = torch.cat((result, get_labset_partial(resarrs, i*split, split)))\n",
+    "        except:\n",
+    "            print(\"empty list\")\n",
+    "        torch.cuda.empty_cache()\n",
+    "        torch.save(result, 'latposlabels.pt')\n",
+    "    return result\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "942d96be-7d8f-43f2-852f-7650e21e222b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#with torch.no_grad():\n",
+    "#    latposylabels = get_biglabset(1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 23,
    "id": "2f6c5c4a-47a2-491c-b061-dcfc80f65d9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(latposylabels, 'latposlabelsdone.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8caf33ac-26d6-4fb4-9222-23c9a22dd778",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([6, 500, 52])"
+       "445022720"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "latposylabels.shape"
+    "torch.cuda.memory_allocated(\"cuda:2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "id": "38fc1532-0756-4196-8ae2-edc68d9ccb34",
    "metadata": {},
    "outputs": [],
@@ -684,17 +821,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 31,
    "id": "a91314d1-8216-43fc-8ba4-c60129285dde",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(39.3077, device='cuda:2', grad_fn=<MseLossBackward0>)"
+       "tensor(35.8972, device='cuda:2', grad_fn=<MseLossBackward0>)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 32,
    "id": "a7b586f3-1873-4370-8c79-e455d1f624c2",
    "metadata": {},
    "outputs": [
@@ -713,8 +850,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5385395537525355\n",
-      "0.02129817444219067\n"
+      "0.6352013901818407\n",
+      "0.018080638821655393\n"
      ]
     }
    ],
@@ -812,7 +949,7 @@
     }
    ],
    "source": [
-    "latbert = LinearLatticeBert(52)"
+    "#latbert = LinearLatticeBert(52)"
    ]
   },
   {
@@ -832,7 +969,7 @@
     }
    ],
    "source": [
-    "basebert = AutoModel.from_pretrained('bert-base-cased')"
+    "#basebert = AutoModel.from_pretrained('bert-base-cased')"
    ]
   },
   {
